// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbBar rendering renders breadcrumb-bar 1`] = `
<div
  className="breadcrumb-bar"
>
  <Breadcrumb
    className="breadcrumbs-list"
    isTitle={false}
    items={
      Array [
        Object {
          "caption": "root",
          "url": "/some-url",
        },
        Object {
          "caption": "child with onClick",
          "onClick": [MockFunction],
        },
        Object {
          "caption": "active child",
        },
      ]
    }
    ouiaId="breadcrumbs-list"
    titleReplacement={null}
  />
  <hr
    className="breadcrumb-line"
  />
</div>
`;

exports[`BreadcrumbBar rendering renders switchable breadcrumb-bar 1`] = `
<div
  className="breadcrumb-bar"
>
  <Breadcrumb
    className="breadcrumbs-list"
    isTitle={false}
    items={
      Array [
        Object {
          "caption": "root",
          "url": "/some-url",
        },
        Object {
          "caption": "child with onClick",
          "onClick": [MockFunction],
        },
        Object {
          "caption": "active child",
        },
      ]
    }
    ouiaId="breadcrumbs-list"
    titleReplacement={null}
  >
    <BreadcrumbSwitcher
      currentPage={null}
      hasError={false}
      isLoading={false}
      isOpen={false}
      items={Array []}
      onHide={[Function]}
      onOpen={[Function]}
      onPerPageSelect={[Function]}
      onResourceClick={[Function]}
      onSearchChange={[Function]}
      onSearchClear={[Function]}
      onSetPage={[Function]}
      openSwitcher={[Function]}
      perPage={10}
      searchDebounceTimeout={0}
      searchValue="some value"
      total={1}
    />
  </Breadcrumb>
  <hr
    className="breadcrumb-line"
  />
</div>
`;

exports[`BreadcrumbBar triggering should trigger callbacks: loadSwitcherResourcesByResource calls 1`] = `
Array [
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
  ],
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
    Object {
      "page": 2,
      "perPage": 10,
      "searchQuery": "some value",
    },
  ],
  Array [
    Object {
      "nameField": "name",
      "resourceUrl": "some/url",
      "switcherItemUrl": "some/url/:id",
    },
    Object {
      "page": 1,
      "perPage": 10,
      "searchQuery": "some value",
    },
  ],
]
`;
